--- a/ansible/roles/kubernetes-storage/tasks/prepare.yml
+++ b/ansible/roles/kubernetes-storage/tasks/prepare.yml
@@ -13,7 +13,7 @@
   tags: kubernetes-app-home-nodered
 
 - include_tasks: apps/home-mosquitto.yml
-  when: "'mosquitto-backend' in kubernetes_local_storage"
+  when: "'mosquitto-config' in kubernetes_local_storage"
   tags: kubernetes-app-home-mosquitto
 
 - include_tasks: apps/dev-gitlab.yml
