--- a/apps/logging/elasticsearch/deploy/service.yaml
+++ b/apps/logging/elasticsearch/deploy/service.yaml
@@ -5,12 +5,14 @@ metadata:
   namespace: logging
   labels:
     app: elasticsearch
+    app-component: elasticsearch
 spec:
-  selector:
-    app: elasticsearch
   clusterIP: None
   ports:
     - port: 9200
       name: rest
     - port: 9300
       name: inter-node
+  selector:
+    app: elasticsearch
+    app-component: elasticsearch
