--- a/apps/monitoring/grafana/deploy/dashboardSources.yaml
+++ b/apps/monitoring/grafana/deploy/dashboardSources.yaml
@@ -3,6 +3,9 @@ kind: ConfigMap
 metadata:
   name: grafana-dashboards
   namespace: monitoring
+  labels:
+    app: grafana
+    app-component: grafana
 data:
   dashboards.yaml: |-
     {
