--- a/apps/monitoring/exporters/deploy/node-exporter/node-exporter-daemonset.yaml
+++ b/apps/monitoring/exporters/deploy/node-exporter/node-exporter-daemonset.yaml
@@ -3,22 +3,26 @@ kind: DaemonSet
 metadata:
   labels:
     app: node-exporter
+    app-component: node-exporter
   name: node-exporter
   namespace: monitoring
 spec:
   selector:
     matchLabels:
       app: node-exporter
+      app-component: node-exporter
   template:
     metadata:
       labels:
         app: node-exporter
+        app-component: node-exporter
     spec:
       containers:
       - args:
         - --web.listen-address=127.0.0.1:9100
         - --path.procfs=/host/proc
         - --path.sysfs=/host/sys
+        - --path.rootfs=/host/root
         - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+)($|/)
         - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|cgroup|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|mqueue|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|sysfs|tracefs)$
         image: quay.io/prometheus/node-exporter:v0.17.0
@@ -42,14 +46,16 @@ spec:
           name: root
           readOnly: true
       - args:
+        - --logtostderr
         - --secure-listen-address=$(IP):9100
+        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
         - --upstream=http://127.0.0.1:9100/
         env:
         - name: IP
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: quay.io/coreos/kube-rbac-proxy:v0.4.0
+        image: quay.io/coreos/kube-rbac-proxy:v0.4.1
         name: kube-rbac-proxy
         ports:
         - containerPort: 9100
