--- a/apps/monitoring/prometheus-operator/deploy/alertmanager/service.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/alertmanager/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app: alertmanager
     alertmanager: main
     prometheus-target: alertmanager-main
   name: alertmanager-main
