--- a/apps/monitoring/prometheus-operator/deploy/prometheus/service.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/prometheus/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app: prometheus
     prometheus: k8s
     prometheus-target: prometheus-k8s
   name: prometheus-k8s
@@ -14,3 +15,4 @@ spec:
   selector:
     app: prometheus
     prometheus: k8s
+  sessionAffinity: ClientIP
