--- a/apps/monitoring/prometheus-operator/deploy/rules/rules.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/rules/rules.yaml
@@ -4,6 +4,8 @@ metadata:
   name: prometheus-k8s-rules
   namespace: monitoring
   labels:
+    app: prometheus
+    app-component: prometheus
     prometheus: k8s
     role: alert-rules
 spec:
