--- a/apps/monitoring/prometheus-operator/deploy/service-monitors/apiserver.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/service-monitors/apiserver.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    k8s-app: apiserver
+    app: apiserver
   name: kube-apiserver
   namespace: monitoring
 spec:
