--- a/apps/monitoring/prometheus-operator/deploy/service-monitors/fluent-bit.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/service-monitors/fluent-bit.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    k8s-app: fluent-bit
+    app: fluent-bit
   name: fluent-bit
   namespace: monitoring
 spec:
