--- a/apps/monitoring/prometheus-operator/deploy/service-monitors/grafana.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/service-monitors/grafana.yaml
@@ -2,12 +2,12 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    k8s-app: grafana
+    app: grafana
   name: grafana
   namespace: monitoring
 spec:
   endpoints:
-  - interval: 30s
+  - interval: 15s
     port: http
   selector:
     matchLabels:
