--- a/apps/monitoring/prometheus-operator/deploy/service-monitors/kubeControllerManager.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/service-monitors/kubeControllerManager.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    k8s-app: kube-controller-manager
+    app: kube-controller-manager
   name: kube-controller-manager
   namespace: monitoring
 spec:
@@ -20,5 +20,4 @@ spec:
     - kube-system
   selector:
     matchLabels:
-      k8s-app: kube-controller-manager
       prometheus-target: kube-controller-manager
