--- a/apps/monitoring/prometheus-operator/deploy/service-monitors/kubeScheduler.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/service-monitors/kubeScheduler.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    k8s-app: kube-scheduler
+    app: kube-scheduler
   name: kube-scheduler
   namespace: monitoring
 spec:
@@ -15,5 +15,4 @@ spec:
     - kube-system
   selector:
     matchLabels:
-      k8s-app: kube-scheduler
       prometheus-target: kube-scheduler
