Add kibana saved objects import

--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -92,3 +92,7 @@ alertmanager_alerts_smtp_enabled: False
 # - name: "{{ alertmanager_alerts_default_receiver }}"
 #   emails_to: 
 #     - whatever@gmail.com
+
+logging_kibana_valid_certs: True
+logging_kibana_export_saved_script_path: "{{ standard_user.home }}/tools/kibana_save_objects.py"
+logging_kibana_export_saved_output_dir: "{{ standard_user.home }}/kibana_saved_objects"
