--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -8,11 +8,22 @@ kubernetes_user:
 
 kubernetes_defnitions_root_dir: /opt/provision/kubernetes
 
+custom_ssl_certs_root_dir: /etc/ssl/private
+
 kubernetes_registry_port: 30500
 kubernetes_registry_url: 127.0.0.1:{{ kubernetes_registry_port }}
 
 # Expose Unifi private services on the Node IP
 #unifi_private_ip: 
+
+openldap_ldap_organisation: Example Inc.
+openldap_ldap_domain: example.org
+openldap_ldap_basedn: "dc=example,dc=org" #if empty automatically set from LDAP_DOMAIN
+openldap_ldap_admin_password: admin
+openldap_ldap_config_password: config
+openldap_ldap_readonly_user_enabled: False
+openldap_ldap_readonly_user_username: readonly
+openldap_ldap_readonly_user_password: readonly
 
 ttrss_context_root: /
 ttrss_pqsql_user: ttrss
