Switch from LDAP over SSL to LDAP + StartTLS

--- a/apps/auth/openldap/deploy/service.yaml
+++ b/apps/auth/openldap/deploy/service.yaml
@@ -7,8 +7,8 @@ metadata:
     app: openldap
 spec:
   ports:
-  - port: 636
-    name: ldaps
+  - port: 389
+    name: ldap
   selector:
     app: openldap
     app-component: openldap
