--- a/apps/auth/lemonldap/deploy/service.yaml
+++ b/apps/auth/lemonldap/deploy/service.yaml
@@ -9,6 +9,8 @@ spec:
   ports:
   - port: 80
     name: http
+  - port: 2884
+    name: handler
   selector:
     app: lemonldap
     app-component: lemonldap
