--- a/ansible/roles/kubernetes-apps/tasks/apps/web-ttrss.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/web-ttrss.yml
@@ -1,5 +1,14 @@
 ---
 
+# We can't just use a lookup('url', ttrss_schema_url) to inject the schema file directly.
+# This gets blocked by a 403, probably due to a user-agent filter on TT-RSS Gogs.
+
+- name: Download the TT-RSS schema
+  get_url:
+    dest: "{{ ttrss_temp_schema_path }}"
+    url: "{{ ttrss_schema_url }}"
+  changed_when: False
+      
 - name: Deploy TT-RSS
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
@@ -8,3 +17,9 @@
     - "{{ kubernetes_app_root_path }}/web/ttrss/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
+
+- name: Remove the TT-RSS schema
+  file:
+    path: "{{ ttrss_temp_schema_path }}"
+    state: absent
+  changed_when: False
