Switch back to the official LemonLDAP image

--- a/ansible/roles/kubernetes-apps/tasks/apps/auth-lemonldap.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/auth-lemonldap.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: List config files
+  set_fact:
+    lemonldap_config_files: "{{ lemonldap_config_files | default([]) + [ item ] }}"
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/auth/lemonldap/config/etc/*"
+
 - name: Deploy LemonLDAP
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
