--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -48,14 +48,14 @@
 - import_tasks: apps/home-roomassistant.yml
   tags: kubernetes-app-home-roomassistant
 
-#- import_tasks: apps/stream-airsonic.yml
-#  tags: kubernetes-app-stream-airsonic
-#
-#- import_tasks: apps/stream-plex.yml
-#  tags: kubernetes-app-stream-plex
-#
-#- import_tasks: apps/dev-gitlab.yml
-#  tags: kubernetes-app-dev-gitlab
+- import_tasks: apps/stream-airsonic.yml
+  tags: kubernetes-app-stream-airsonic
+
+- import_tasks: apps/stream-plex.yml
+  tags: kubernetes-app-stream-plex
+
+- import_tasks: apps/dev-gitlab.yml
+  tags: kubernetes-app-dev-gitlab
 
 - import_tasks: apps/logging-elasticsearch.yml
   tags: kubernetes-app-logging-elasticsearch
