Improve HomeAssistant MQTT secrets

--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -91,6 +91,8 @@ homeassistant_mysql_user: homeassistant
 homeassistant_mysql_database: homeassistant
 homeassistant_mysql_password: clear_password
 homeassistant_mysql_root_password: clear_password
+homeassistant_mqtt_user: homeassistant
+homeassistant_mqtt_password: clear_password
 
 nodered_context_root: /
 
