--- a/apps/auth/openldap/deploy/service.yaml
+++ b/apps/auth/openldap/deploy/service.yaml
@@ -9,6 +9,8 @@ spec:
   ports:
   - port: 389
     name: ldap
+  - port: 636
+    name: ldaps
   selector:
     app: openldap
     app-component: openldap
