--- a/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
@@ -1,5 +1,15 @@
 ---
 
+  # TODO not idempotent
+  # Push always registers a change : https://github.com/ansible/ansible/issues/25040
+  # And build doesn't update an existing image without force=yes ...
+- name: Build and push Node-RED image
+  docker_image:
+    path: "{{ kubernetes_app_root_path }}/home/nodered/build"
+    name: "{{ kubernetes_registry_url }}/nodered"
+    force: yes
+    push: yes
+
 - name: Deploy Node-RED
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
