--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -96,6 +96,10 @@ homeassistant_mqtt_password: clear_password
 homeassistant_ldap_users_dn: "{{ openldap_ldap_structure_users_ou_dn }}"
 
 nodered_context_root: /
+nodered_ldap_users_dn: "{{ openldap_ldap_structure_users_ou_dn }}"
+nodered_ldap_manager_dn: "{{ openldap_ldap_admin_dn }}"
+nodered_ldap_manager_password: "{{ openldap_ldap_admin_password }}"
+nodered_ldap_group_base: openldap_ldap_structure_groups_ou_dns['groups']
 
 # First listener is used as default
 mosquitto_listeners: 
