--- a/apps/monitoring/grafana/deploy/dashboardProviders-configMap.yaml
+++ b/apps/monitoring/grafana/deploy/dashboardProviders-configMap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: grafana-dashboards
+  name: grafana-dashboard-providers
   namespace: monitoring
   labels:
     app: grafana
