--- a/ansible/roles/kubernetes-apps/tasks/apps/stream-airsonic.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/stream-airsonic.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: List config files
+  set_fact:
+    airsonic_config_files: "{{ airsonic_config_files | default([]) + [ item ] }}"
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/stream/airsonic/config/*.*"
+
 - name: Deploy Airsonic
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
